About page modifs and more

--- a/aboutpage.css
+++ b/aboutpage.css
@@ -56,14 +56,14 @@ body{
 	display: block;
 } */
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
 	nav a:not(:first-child) {display: none;}
 	nav .icon_like:not(:first-child) {display: block; padding-left: 15%;}
-	/* nav a.icon {
+	nav a.icon {
 	  float: right;
 	  display: block;
-	} */
-}
+	}
+} */
 
 nav a{
 	text-decoration: none;
@@ -74,11 +74,114 @@ nav a{
 	padding-left: 1%;
 	padding-right: 2%;
 	padding-bottom: 0px;
-	font-size: 150%;
+	font-size: 1.5vw;
 	text-transform: uppercase;
 	font-family: 'Patua One', cursive;
 	margin-top: 1%;
 	margin-bottom: 1%;
+}
+
+#container1{
+	height: 100vmin;
+	background-image: url("Images/aboutpagebg.png");
+	background-size: 100vw;
+	background-repeat: no-repeat;
+	background-color: #ffd500;
+}
+
+#container1 #header1_exam_part{
+	margin-top: 5%;
+	padding-top: 10%;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: 'Changa One', cursive;
+	font-size: 7.5vw;
+	padding: 0 0 0 0;
+	margin-bottom: 0;
+}
+
+#container1 #header1_stomach_part{
+	margin-top: 0%;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: 'Changa One', cursive;
+	font-size: 3vw;
+}
+
+#container2{
+	margin-top: 0;
+	height: 100vmin;
+	background-color: orange;
+}
+
+#solution{
+	text-align: center;
+	font-size: 1.8vw;
+	font-family: 'Secular One', sans-serif;
+	text-transform: uppercase;
+}
+
+#first_man{
+	content: url("Images/pin.png");
+	width: 20%;
+	margin-top: 5%;
+	margin-left: 40%;
+	border-radius: 50%;
+}
+
+#container2 h1{
+	margin-left: 5%;
+	margin-top: 0;
+	padding-top: 5%;
+	font-family: 'Secular One', sans-serif;
+	color: rgb(0, 0, 0);
+	font-size: 2vw;
+	text-align: right;
+	margin-right: 5%;
+	line-height: 250%;
+	
+}
+
+#container2 h1 span{
+	background-color: white;
+	padding-left: 5%;
+	padding-right: 5%;
+	border-radius: 100px;
+	border: 2px solid black;
+}
+
+#container3{
+	height: 100vmin;
+	margin: 0 0 0 0;
+	background-color: #27AAE2;
+	background-image: url("Images/paperplane.jpg");
+	background-size: 100vmin;
+	background-repeat: no-repeat;
+}
+
+#container3 h1{
+	margin-top: 0;
+	padding-top: 5%;
+	padding-left: 5%;
+	color: rgb(255, 225, 0);
+	font-size: 2vw;
+	font-family: 'Secular One', sans-serif;
+}
+
+#container3 h1 span{
+	background-color: rgb(0, 0, 0);
+	padding-left: 5%;
+	padding-right: 5%;
+	border-radius: 100px;
+}
+
+#ishita{
+	margin-left: 70%;
+}
+
+#ansh{
+	margin-top: 50%;
+	margin-left: 30%;
 }
 
 /*Footer*/
@@ -93,7 +196,7 @@ nav a{
 
 .footer p{
 	font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 100%; /* Set the font size to 1.2 rem */
+    font-size: 1vw; /* Set the font size to 1.2 rem */
     text-align: center;
 	/* margin-top: 5%; */
 	margin-top: 1%;
