--- a/menu_page.css
+++ b/menu_page.css
@@ -192,7 +192,7 @@ margin-bottom: 25%;
     width: 15vw;
     height: 20vw;
     background-color: rgb(242, 197, 73);
-    /* border-radius: 10px; */
+    border-radius: 10px;
     margin: 20px;
     margin-left: 0%;
     text-align: center;
@@ -227,7 +227,7 @@ margin-bottom: 25%;
     border: none;
     background-color: #68cc2e;
     color: #fff;
-    padding: 5px 20px;
+    padding: 10px 30px;
     border-radius: 5px;
     font-size: 10px;
     cursor: pointer;
@@ -261,7 +261,7 @@ counter button starts
     border: none;
     background-color: #68cc2e;
     color: #fff;
-    padding: 5px 7px;
+    padding: 0px 10px;
     border-radius: 5px;
     font-size: 10px;
     
@@ -308,29 +308,6 @@ counter button starts
 
 
 
-  /* Cart styles */
-.cart {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 25%;
-  height: 140vh;
-  margin-right: 0;
-  background-color: #e48d6a; /* Orange color */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  padding: 1rem;
-  overflow-y: scroll;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: larger;
-  margin-top: 4%;
-}
-.cart {
-  border: 1px solid black;
-  border-right: none;
-  border-radius: 0 5px 5px 0;
-  padding: 10px;
-  margin-right: 0;
-}
 
 .cart-item {
   display: flex;
@@ -353,3 +330,88 @@ counter button starts
 
 
 
+
+.cart {
+position: absolute;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 178vh;
+  margin-right: 0;
+  background-color: #e48d6a; /* Orange color */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  overflow-y: scroll;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: larger;
+  margin-top: 9.5%;
+  /* margin-bottom: 10%; */
+  /* border-radius: 50px; */
+  border: 1px solid black;
+  border-right: none;
+  border-radius: 0 5px 5px 0;
+  padding: 10px;
+}
+
+.cart h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.cart form {
+  margin-bottom: 20px;
+}
+
+.cart label {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.cart input[type=text] {
+  border-radius: 3px;
+  border: 1px solid #CCC;
+  font-size: 16px;
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.cart .cart-list {
+  border: 1px solid #CCC;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.cart .cart-list .empty-cart {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.cart .checkout-btn {
+  background-color: #FFA500;
+  border: none;
+  border-radius: 3px;
+  color: #FFF;
+  cursor: pointer;
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+  width: 100%;
+}
+
+.cart .checkout-btn:hover {
+  background-color: #FF6600;
+}
+
+.cart-buttons {
+  margin-bottom: 0;
+}
