--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -253,7 +253,8 @@
               <input type="text" id="location" name="location" required><br>
               <label for="batch">Batch:</label>
               <input type="text" id="batch" name="batch" required>
-            
+              <label for="phone">Phone No.:</label>
+              <input type="text" id="phone" name="phone" required>
                 <div class="cart-list">
                 <!-- <p class="empty-cart">Your Cart</p> -->
                 </div>
