--- a/templates/pickuppage.html
+++ b/templates/pickuppage.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="pickuppage.css">
+    <link rel="stylesheet" type="text/css" href="../static/pickuppage.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -20,7 +20,14 @@
         <a href = "aboutpage.html">About</a>			
     </nav>
 
-
+    <div class="tile">
+        <h2>{{title}}</h2>
+        <p>{{description}}</p>
+    </div>
+    
+    <div id = "container">
+        
+    </div>
 
     <div class="footer">
         <div id="gradient"></div><b>
@@ -33,8 +40,8 @@
         </b>
         <br />
     </div>
-
-    <script src="pick_page.js"></script>
+    <p id = "idontknowwhatiamdoing">orders.txt</p>
+    <script src="pickuppage.js"></script>
 </body>
 
 </html>
