--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -3,19 +3,19 @@
 	<head>
 		<title>Basic Template</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel = "stylesheet" href = "aboutpage.css">
+		<link rel = "stylesheet" href = "../static/aboutpage.css">
 	</head>
 	<body>
 		<nav>
 			<img id = "logo">
 			<!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-			<a href = "homepage.html">Home</a>
+			<a href = "homepage">Home</a>
 			<!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-			<a href = "menu_page.html">Menu and Order</a>
+			<a href = "menu_page">Menu and Order</a>
 			<!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-			<a href = "pickuppage.html">Pickup</a>
+			<a href = "pickup">Pickup</a>
 			<!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-			<a href = "aboutpage.html">About</a>			
+			<a href = "about">About</a>			
 		</nav>
 		<div id = "container1">
 			<h1 id = "header1_exam_part">Exam next day?</h1><h1 id = "header1_stomach_part">Stomach Empty but no time to go out?</h1>
@@ -37,11 +37,11 @@
 			<h1 id = "bipasha"><span>Bipasha Garg</span></h1>
 			<h1 id = "ishita"><span>Ishita Bansal</span></h1>
 			<br>
-			<img src="Images\Clipart1.jpeg" align="right">
+			<img src="../Images/Clipart1.jpeg" align="right">
 			<br><br><br><br><br><br><br>
-			<img src="Images\Clipart2.jpeg" align="right" style="margin-right:20%;">
+			<img src="../Images/Clipart2.jpeg" align="right" style="margin-right:20%;">
 			<br><br><br><br><br><br><br>
-			<img src="Images\Clipart3.jpeg" align="right" style="margin-right:10%;">
+			<img src="../Images/Clipart3.jpeg" align="right" style="margin-right:10%;">
 			<br>
 			
 			<h1 id = "ansh"><span>Ansh Chablani</span></h1>
@@ -50,7 +50,7 @@
 			<div id = "gradient"></div><b>
 				<p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class = "colorspan">Ansh Chablani</span> | <span class = "colorspan">Ishita Bansal</span> | <span class = "colorspan">Bipasha Garg</span> <br><br>
 				To know more about us, visit:
-			<a href="aboutpage.html" >About</a></p>
+			<a href="../static/aboutpage.html" >About</a></p>
 			</b>
 			<br />
 		  </div>
