--- a/templates/all.html
+++ b/templates/all.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Basic Template</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel = "stylesheet" href = "all.css">
+		<link rel = "stylesheet" href = "../static/all.css">
 	</head>
 	<body>
 		<nav>
@@ -18,13 +18,13 @@
 			<a href = "">About</a>			
 		</nav>
 
-		<script src = "all.js"></script>
+		<script src = "../static/all.js"></script>
 	
 		<div class="footer">
 			<div id = "gradient"></div><b>
 				<p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class = "colorspan">Ansh Chablani</span> | <span class = "colorspan">Ishita Bansal</span> | <span class = "colorspan">Bipasha Garg</span> <br><br>
 				To know more about us, visit:
-			<a href="about.html" >About</a></p>
+			<a href="../static/about.html" >About</a></p>
 			</b>
 			<br />
 		  </div>
