--- a/templates/pickuppage.html
+++ b/templates/pickuppage.html
@@ -11,13 +11,13 @@
     <nav>
         <img id = "logo">
         <!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-        <a href = "homepage.html">Home</a>
+        <a href = "../static/homepage.html">Home</a>
         <!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-        <a href = "menu_page.html">Menu and Order</a>
+        <a href = "../static/menu_page.html">Menu and Order</a>
         <!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-        <a href = "pickuppage.html">Pickup</a>
+        <a href = "../static/pickuppage.html">Pickup</a>
         <!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-        <a href = "aboutpage.html">About</a>			
+        <a href = "../static/aboutpage.html">About</a>			
     </nav>
 
     <div class="tile">
@@ -35,13 +35,13 @@
                     Chablani</span> | <span class="colorspan">Ishita Bansal</span> | <span class="colorspan">Bipasha
                     Garg</span> <br><br>
                 To know more about us, visit:
-                <a href="aboutpage.html">About</a>
+                <a href="../static/aboutpage.html">About</a>
             </p>
         </b>
         <br />
     </div>
     <p id = "idontknowwhatiamdoing">orders.txt</p>
-    <script src="pickuppage.js"></script>
+    <script src="../static/pickuppage.js"></script>
 </body>
 
 </html>
