--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" type="text/css" href="../static/footer.css">
 </head>
 
 </head>
@@ -11,7 +11,7 @@
     <div id = "gradient"></div><b>
    IIIT EATS: a perfect platform to serve your hunger <br> Created by Ansh Chabalani , Ishita Bansal, Bipasha Garg <br>
    To know more about us, visit: 
-    <a href="about.html" >About</a>
+    <a href="../static/about.html" >About</a>
 </b>
     <br />
   </div>
