--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,19 +3,19 @@
 	<head>
 		<title>Homepage</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel = "stylesheet" href = "homepage.css">
+		<link rel = "stylesheet" href = "../static/homepage.css">
 	</head>
 	<body>
 		<nav>
 			<img id = "logo">
 			<!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-			<a href = "homepage.html">Home</a>
+			<a href = "../static/homepage.html">Home</a>
 			<!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-			<a href = "menu_page.html">Menu and Order</a>
+			<a href = "../static/menu_page.html">Menu and Order</a>
 			<!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-			<a href = "pickuppage.html">Pickup</a>
+			<a href = "../static/pickuppage.html">Pickup</a>
 			<!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-			<a href = "aboutpage.html">About</a>			
+			<a href = "../static/aboutpage.html">About</a>			
 		</nav>
 
 		<div id = "container1">
@@ -23,20 +23,20 @@
 			<h1>Eat Whatever <br>Whenever <br> And <br> Earn Money</h1>
 			<p id = "main_container_info">Introducing to you the one of its kind food ordering system that helps you save time and makes you get the food at your doorstep.</p>
 
-			<a href = "placeorder.html" id = "place_order"><p><img class = "arrow_forward">Place Order </p></a>
-			<p id = "or">or <span class = "red"><a href = "pickup.html">pick-up an order</a></p>
+			<a href = "../static/placeorder.html" id = "place_order"><p><img class = "arrow_forward">Place Order </p></a>
+			<p id = "or">or <span class = "red"><a href = "../static/pickup.html">pick-up an order</a></p>
 		</div>
 
 		<div id = "container2">
 
 		</div>
-		<script src = "all.js"></script>
+		<script src = "../static/all.js"></script>
 	
 		<div class="footer">
 			<div id = "gradient"></div><b>
 				<p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class = "colorspan">Ansh Chablani</span> | <span class = "colorspan">Ishita Bansal</span> | <span class = "colorspan">Bipasha Garg</span> <br><br>
 				To know more about us, visit:
-			<a href="aboutpage.html" >About</a></p>
+			<a href="../static/aboutpage.html" >About</a></p>
 			</b>
 			<br />
 		  </div>
