--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="menu_page.css">
+    <link rel="stylesheet" type="text/css" href="../static/menu_page.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js"></script>
@@ -16,13 +16,13 @@
     <nav>
         <img id = "logo">
         <!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-        <a href = "homepage.html">Home</a>
+        <a href = "../static/homepage.html">Home</a>
         <!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-        <a href = "menu_page.html">Menu and Order</a>
+        <a href = "../static/menu_page.html">Menu and Order</a>
         <!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-        <a href = "pickuppage.html">Pickup</a>
+        <a href = "../static/pickuppage.html">Pickup</a>
         <!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-        <a href = "aboutpage.html">About</a>			
+        <a href = "../static/aboutpage.html">About</a>			
     </nav>
 
     <div class="container">
@@ -270,14 +270,14 @@
                     Chablani</span> | <span class="colorspan">Ishita Bansal</span> | <span class="colorspan">Bipasha
                     Garg</span> <br><br>
                 To know more about us, visit:
-                <a href="aboutpage.html">About</a>
+                <a href="../static/aboutpage.html">About</a>
             </p>
         </b>
         <br />
     </div>
 </div>
 
-    <script src="menu_page.js"></script>
+    <script src="../static/menu_page.js"></script>
 </body>
 
 </html>
