--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -11,11 +11,11 @@
 			<!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
 			<a href = "homepage">Home</a>
 			<!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-			<a href = "menu_page">Menu and Order</a>
+			<a href = "menupage">Menu and Order</a>
 			<!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
 			<a href = "pickup">Pickup</a>
 			<!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-			<a href = "about">About</a>			
+			<a href = "aboutpage">About</a>			
 		</nav>
 		<div id = "container1">
 			<h1 id = "header1_exam_part">Exam next day?</h1><h1 id = "header1_stomach_part">Stomach Empty but no time to go out?</h1>
@@ -50,7 +50,7 @@
 			<div id = "gradient"></div><b>
 				<p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class = "colorspan">Ansh Chablani</span> | <span class = "colorspan">Ishita Bansal</span> | <span class = "colorspan">Bipasha Garg</span> <br><br>
 				To know more about us, visit:
-			<a href="../static/aboutpage.html" >About</a></p>
+			<a href="aboutpage" >About</a></p>
 			</b>
 			<br />
 		  </div>
