--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
     <div id = "gradient"></div><b>
    IIIT EATS: a perfect platform to serve your hunger <br> Created by Ansh Chabalani , Ishita Bansal, Bipasha Garg <br>
    To know more about us, visit: 
-    <a href="../static/about.html" >About</a>
+    <a href="aboutpage" >About</a>
 </b>
     <br />
   </div>
