--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -16,13 +16,13 @@
     <nav>
         <img id = "logo">
         <!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-        <a href = "../static/homepage.html">Home</a>
+        <a href = "homepage">Home</a>
         <!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-        <a href = "../static/menu_page.html">Menu and Order</a>
+        <a href = "menupage">Menu and Order</a>
         <!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-        <a href = "../static/pickuppage.html">Pickup</a>
+        <a href = "pickup">Pickup</a>
         <!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-        <a href = "../static/aboutpage.html">About</a>			
+        <a href = "aboutpage">About</a>			
     </nav>
 
     <div class="container">
@@ -270,7 +270,7 @@
                     Chablani</span> | <span class="colorspan">Ishita Bansal</span> | <span class="colorspan">Bipasha
                     Garg</span> <br><br>
                 To know more about us, visit:
-                <a href="../static/aboutpage.html">About</a>
+                <a href="aboutpage">About</a>
             </p>
         </b>
         <br />
