--- a/templates/all.html
+++ b/templates/all.html
@@ -9,13 +9,13 @@
 		<nav>
 			<img id = "logo">
 			<!-- <a href = "" class = "icon_like"><img id = "one"></a> -->
-			<a href = "">Home</a>
+			<a href = "homepage">Home</a>
 			<!-- <a href = "" class = "icon_like"><img id = "two"></a> -->
-			<a href = "">Menu and Order</a>
+			<a href = "menupage">Menu and Order</a>
 			<!-- <a href = "" class = "icon_like"><img id = "three"></a> -->
-			<a href = "">Pickup</a>
+			<a href = "pickup">Pickup</a>
 			<!-- <a href = "" class = "icon_like"><img id = "four"></a> -->
-			<a href = "">About</a>			
+			<a href = "aboutpage">About</a>			
 		</nav>
 
 		<script src = "../static/all.js"></script>
@@ -24,7 +24,7 @@
 			<div id = "gradient"></div><b>
 				<p>IIIT EATS: a perfect platform to serve your hunger <br><br>Created by <span class = "colorspan">Ansh Chablani</span> | <span class = "colorspan">Ishita Bansal</span> | <span class = "colorspan">Bipasha Garg</span> <br><br>
 				To know more about us, visit:
-			<a href="../static/about.html" >About</a></p>
+			<a href="aboutpage" >About</a></p>
 			</b>
 			<br />
 		  </div>
