--- a/templates/pickuppage.html
+++ b/templates/pickuppage.html
@@ -40,6 +40,11 @@
         </b>
         <br />
     </div>
+
+    <div>
+        
+    </div>
+
     <p id = "idontknowwhatiamdoing">orders.txt</p>
     <script src="../static/pickuppage.js"></script>
 </body>
