--- a/static/all.css
+++ b/static/all.css
@@ -29,23 +29,23 @@ body{
 	margin-right: 2%;
 	margin-top: 0.5%;
 	width: 3%;
-	content: url("Images/home.png");
+	content: url("../static/home.png");
 }
 
 #one{
-	content: url("images/home.png");
+	content: url("../static/home.png");
 }
 
 #two{
-	content: url("Images/menu.png");
+	content: url("../static/menu.png");
 }
 
 #three{
-	content: url("Images/pick.png");
+	content: url("../static/pick.png");
 }
 
 #four{
-	content: url("Images/group.png");
+	content: url("../static/group.png");
 }
 
 /* .no_display{
