--- a/static/menu_page.css
+++ b/static/menu_page.css
@@ -25,23 +25,23 @@ nav .icon_like{
 	margin-right: 2%;
 	margin-top: 0.5%;
 	width: 3%;
-	content: url("../Images/home.png");
+	content: url("../static/home.png");
 }
 
 #one{
-	content: url("../Images/home.png");
+	content: url("../static/home.png");
 }
 
 #two{
-	content: url("../Images/menu.png");
+	content: url("../static/menu.png");
 }
 
 #three{
-	content: url("../Images/pick.png");
+	content: url("../static/pick.png");
 }
 
 #four{
-	content: url("../Images/group.png");
+	content: url("../static/group.png");
 }
 
 /* .no_display{
