--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -37,8 +37,8 @@
             <div class="menu">
                 <a href="#" class="tile">
                     <h3>1</h3>
-                    <h2>Oreo Shake</h2>
-                    <p>35</p>
+                    <h2>dosa</h2>
+                    <p>45</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -50,7 +50,7 @@
                 <a href="#" class="tile">
                     <h3>2</h3>
                     <h2>shawarma</h2>
-                    <p>Price</p>
+                    <p>35</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -61,8 +61,8 @@
                 </a>
                 <a href="#" class="tile">
                     <h3>3</h3>
-                    <h2>noodles</h2>
-                    <p>Price</p>
+                    <h2>veg noodles</h2>
+                    <p>70</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -73,8 +73,8 @@
                 </a>
                 <a href="#" class="tile">
                     <h3>4</h3>
-                    <h2>Just checking if wrapping</h2>
-                    <p>Price</p>
+                    <h2>chicken noodles</h2>
+                    <p>90</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -89,8 +89,8 @@
             <div class="menu">
                 <a href="#" class="tile">
                     <h3>5</h3>
-                    <h2>fdg 1</h2>
-                    <p>Price</p>
+                    <h2>chicken shawarma</h2>
+                    <p>50</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -101,8 +101,8 @@
                 </a>
                 <a href="#" class="tile">
                     <h3>6</h3>
-                    <h2>dfhd 2</h2>
-                    <p>Price</p>
+                    <h2>veg fried rice</h2>
+                    <p>80</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -113,8 +113,8 @@
                 </a>
                 <a href="#" class="tile">
                     <h3>7</h3>
-                    <h2>jg 3</h2>
-                    <p>Price</p>
+                    <h2>chicken fried rice</h2>
+                    <p>100</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -125,8 +125,8 @@
                 </a>
                 <a href="#" class="tile">
                     <h3>8</h3>
-                    <h2>dsffsd 1</h2>
-                    <p>Price</p>
+                    <h2>veg manchurian</h2>
+                    <p>80</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -141,8 +141,8 @@
             <div class="menu">
                 <a href="#" class="tile">
                     <h3>9</h3>
-                    <h2>fgd 1</h2>
-                    <p>Price</p>
+                    <h2>mango</h2>
+                    <p>30</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -153,8 +153,8 @@
                 </a>
                 <a href="#" class="tile">
                     <h3>10</h3>
-                    <h2>jyf 2</h2>
-                    <p>Price</p>
+                    <h2>watermelon</h2>
+                    <p>25</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -164,9 +164,9 @@
                     </div>
                 </a>
                 <a href="#" class="tile">
-                    <h3>1</h3>
-                    <h2>sdtgr 3</h2>
-                    <p>Price</p>
+                    <h3>11</h3>
+                    <h2>oreo shake</h2>
+                    <p>35</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -176,9 +176,9 @@
                     </div>
                 </a>
                 <a href="#" class="tile">
-                    <h3>1</h3>
-                    <h2>Title 1</h2>
-                    <p>Price</p>
+                    <h3>12</h3>
+                    <h2>mix fruit</h2>
+                    <p>35</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -193,9 +193,9 @@
         <div class="tiles-container">
             <div class="menu">
                 <a href="#" class="tile">
-                    <h3>1</h3>
-                    <h2>Tfgitle 1</h2>
-                    <p>Price</p>
+                    <h3>13</h3>
+                    <h2>sandwich</h2>
+                    <p>50</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -205,9 +205,9 @@
                     </div>
                 </a>
                 <a href="#" class="tile">
-                    <h3>1</h3>
-                    <h2>Title 2</h2>
-                    <p>Price</p>
+                    <h3>14</h3>
+                    <h2>maggie</h2>
+                    <p>35</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -217,9 +217,9 @@
                     </div>
                 </a>
                 <a href="#" class="tile">
-                    <h3>1</h3>
-                    <h2>Title 3</h2>
-                    <p>Price</p>
+                    <h3>15</h3>
+                    <h2>veg puff</h2>
+                    <p>25</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
@@ -229,9 +229,9 @@
                     </div>
                 </a>
                 <a href="#" class="tile">
-                    <h3>1</h3>
-                    <h2>Mango </h2>
-                    <p>Price</p>
+                    <h3>16</h3>
+                    <h2>chicken puff</h2>
+                    <p>30</p>
                     
                     <button class="add-btn">Add</button>
                     <div class="counter">
